# cured

./: .gitignore  README.md  deployment.yaml  dockerfile  main.py  pyproject.toml
AutogluonModels/age/: learner.pkl
AutogluonModels/checking_status/: learner.pkl
AutogluonModels/city/: learner.pkl  metadata.json
AutogluonModels/credit_amount/: learner.pkl
AutogluonModels/credit_history/: learner.pkl
AutogluonModels/duration/: learner.pkl  metadata.json
AutogluonModels/employment/: learner.pkl
AutogluonModels/existing_credits/: learner.pkl
AutogluonModels/foreign_worker/: learner.pkl
AutogluonModels/has_children/: learner.pkl
AutogluonModels/housing/: learner.pkl
AutogluonModels/income/: learner.pkl
AutogluonModels/installment_commitment/: learner.pkl
AutogluonModels/job/: learner.pkl
AutogluonModels/num_dependents/: learner.pkl
AutogluonModels/other_parties/: learner.pkl
AutogluonModels/other_payment_plans/: learner.pkl
AutogluonModels/own_telephone/: learner.pkl
AutogluonModels/personal_status/: learner.pkl
AutogluonModels/property_magnitude/: learner.pkl
AutogluonModels/purpose/: learner.pkl  predictor.pkl
AutogluonModels/residence_since/: learner.pkl
AutogluonModels/savings_status/: learner.pkl
app/: Home.py  main.py
app/components/: conformal_cleaner.py  dataset_loader.py  injector.py  mech_detect.py
app/pages/: 1_Data_Loading.py  1_error_injection.py  2_Error_Creation.py  3_Error_Cleaning.py  (+3 more)
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
data/: 44969.csv  analyze_dataset.ipynb  get_data.ipynb
(+411 files in other folders)
